dist_man1_MANS=

if BUILD_CALIFORNIUMD
  dist_man1_MANS+=californium252d.1
endif

if ENABLE_QT
  dist_man1_MANS+=californium252-qt.1
endif

if BUILD_CALIFORNIUM_CLI
  dist_man1_MANS+=californium252-cli.1
endif

if BUILD_CALIFORNIUM_TX
  dist_man1_MANS+=californium252-tx.1
endif

if BUILD_CALIFORNIUM_UTIL
  dist_man1_MANS+=californium252-util.1
endif

if ENABLE_WALLET
if BUILD_CALIFORNIUM_WALLET
  dist_man1_MANS+=californium252-wallet.1
endif
endif
